# android-tflite-custom

./: .gitmodules  README.md
app/: build.gradle
app/src/cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
